【修改】logbus兼容性，降低jdk版本1.8