@@ -3,6 +3,7 @@ package wxdgaming.logbus.util;
 import com.alibaba.fastjson.JSON;
 import com.alibaba.fastjson.JSONObject;
 
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
@@ -19,19 +20,19 @@ public class FileUtil {
     public static void writeString2File(Path path, String content) {
         try {
             Files.createDirectories(path.getParent());
-            Files.writeString(path, content);
+            Files.write(path, content.getBytes(StandardCharsets.UTF_8));
         } catch (Exception ex) {
             throw new RuntimeException("写入文件失败：" + path, ex);
         }
     }
 
     public static void writeLog2File(Path path, String url, List<JSONObject> content) {
-        writeString2File(path, "0\n%s\n%s".formatted(url, JSON.toJSONString(content)));
+        writeString2File(path, String.format("0\n%s\n%s", url, JSON.toJSONString(content)));
     }
 
-    public static String readLog4File(Path path) {
+    public static String readString4File(Path path) {
         try {
-            return Files.readString(path);
+            return new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
         } catch (Exception ex) {
             throw new RuntimeException("写入文件失败：" + path, ex);
         }
