@@ -37,7 +37,7 @@ public class StringUtils {
     }
 
     public static boolean isBlank(String s) {
-        return s == null || s.isBlank();
+        return s == null || s.isEmpty() || s.trim().isEmpty();
     }
 
     public static boolean isNotBlank(String s) {
